...
                                    <outlet property="delegate" destination="gOk-wR-EoD" id="wmu-0C-cIe"/>
                                </connections>
                            </tableView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x9I-Af-37l" userLabel="CustomNavBar">
                                <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jhM-0n-EoW">
                                        <rect key="frame" x="253" y="30" width="93" height="21"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="93" id="awJ-WZ-Tw2"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
                                        <constraints>
                                            <constraint firstAttribute="width" constant="20" id="Ctk-c4-o30">
                                                <variation key="heightClass=regular-widthClass=regular" constant="50"/>
                                            </constraint>
                                            <constraint firstAttribute="width" secondItem="RUm-yS-It3" secondAttribute="height" multiplier="1:1" id="nyw-3Z-5QR"/>
                                        </constraints>
                                        <state key="normal" image="arr24"/>
                                        <connections>
                                            <action selector="backPressed" destination="gOk-wR-EoD" eventType="touchUpInside" id="1wP-NS-uoN"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
...
